Orquestração/dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: dashboard.itau
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
