Orquestração/ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example 
  annotations:
   kubernetes.io/ingress.class: ingress-nginx 
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
